analysis started + extraneous code block deleted in project007

--- a/007analysis.ipynb
+++ b/007analysis.ipynb
@@ -1,353 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Project 007 - Jupyter Notebook Code  \n",
-    "Andy Snitgen  \n",
-    "Professor Karen Jin  \n",
-    "Comp 574 - Applied Computing II  \n",
-    "October 31, 2021  "
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import requests, json, time, csv, pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "from bs4 import BeautifulSoup\n",
-    "\n",
-    "# Create the data frame\n",
-    "column_names = ['Title', 'Year', 'Actor', 'US Box Office', 'International Revenue', 'Adjusted Revenue', 'Average Rating', 'IMDb Rating', 'Metacritic']\n",
-    "df = pd.DataFrame(columns = column_names)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create a function that grabs the relevant data and returns the new row\n",
-    "def data(movie_title):\n",
-    "    # Set initial API string for IMDB\n",
-    "    api_key = \"k_nh5thpq8\"\n",
-    "    base_url = \"https://imdb-api.com/en/API/SearchMovie/\"\n",
-    "    complete_url = base_url + api_key + \"/\" + movie_title\n",
-    "\n",
-    "    # Get the title ID\n",
-    "    payload = requests.get(complete_url).json()\n",
-    "    df_temp = pd.json_normalize(payload['results'])\n",
-    "    id_num = df_temp.id.iloc[0]\n",
-    "\n",
-    "    # use the id number to get the required info\n",
-    "    base_url = \"https://imdb-api.com/en/API/Title/\"\n",
-    "    complete_url = base_url + api_key + \"/\" + id_num \n",
-    "    payload = requests.get(complete_url).json()\n",
-    "    df_temp = pd.json_normalize(payload)\n",
-    "    df_temp2 = pd.json_normalize(payload['starList'])\n",
-    "\n",
-    "    # Extract relevant data and put it into variables\n",
-    "    title = df_temp.title.iloc[0]\n",
-    "    year = df_temp.year.iloc[0]\n",
-    "    actor = df_temp2.name.iloc[0]\n",
-    "    us_box = df_temp['boxOffice.grossUSA'].iloc[0]\n",
-    "    itl_box = df_temp[\"boxOffice.cumulativeWorldwideGross\"].iloc[0]\n",
-    "    critic = payload['metacriticRating']\n",
-    "    critic = critic + '%'\n",
-    "    rating = payload['imDbRating']\n",
-    "    if rating == '':\n",
-    "        rating = critic\n",
-    "        rating = rating.replace('%', '')\n",
-    "        rating = float(rating)\n",
-    "        rating = rating / 10\n",
-    "        rating = str(rating) + ' / 10 (est.)'\n",
-    "    else:\n",
-    "        rating = rating + ' / 10'\n",
-    "\n",
-    "    # Check if International Box Office Data exists, if it doesn't replace the value with 'No Data'\n",
-    "    if title == 'No Time to Die' and checker() == False:  # No Time to Die has to be put in manually as API doesn't have data yet\n",
-    "        us_box = '$120,357,453'\n",
-    "        itl_box = '$525,482,453'\n",
-    "    us_box_float = floater(us_box)\n",
-    "    itl_box_float =  floater(itl_box)\n",
-    "    if abs((us_box_float - itl_box_float) / us_box_float) <= 0.01:\n",
-    "        itl_box = \"No Data\"\n",
-    "\n",
-    "    # Put variables into main data frame\n",
-    "    new_row = {'Title': title, 'Year': year, 'Actor': actor, 'US Box Office': us_box, \"International Revenue\": itl_box, 'IMDb Rating': rating, 'Metacritic': critic}\n",
-    "    return new_row\n",
-    "     "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create a function that converts $ strings into floats\n",
-    "def floater(input_str):\n",
-    "    floater = input_str.strip('$')\n",
-    "    floater = floater.replace(',','')\n",
-    "    floater = floater.replace(' (est.)', '')\n",
-    "    floater = float(floater)\n",
-    "    return floater"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create a function that turns an IMDb rating string into a float\n",
-    "def replace_rating(input_str):\n",
-    "    ret_value = input_str.replace(' / 10', '')\n",
-    "    ret_value = ret_value.replace(' (est.)', '')\n",
-    "    ret_value = float(ret_value)\n",
-    "    ret_value = ret_value * 10\n",
-    "    return ret_value"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create a function that turns a Metacritic score into a float\n",
-    "def replace_critic(input_str):\n",
-    "    ret_value = input_str.replace('%', '')\n",
-    "    ret_value = float(ret_value)\n",
-    "    return ret_value"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# function to test if 'No Time to Die' has data yet\n",
-    "def checker():\n",
-    "    movie_title = 'no time to die'\n",
-    "\n",
-    "    # Set initial API string for IMDB\n",
-    "    api_key = \"k_nh5thpq8\"\n",
-    "    base_url = \"https://imdb-api.com/en/API/SearchMovie/\"\n",
-    "    complete_url = base_url + api_key + \"/\" + movie_title\n",
-    "\n",
-    "    # Get the title ID\n",
-    "    payload = requests.get(complete_url).json()\n",
-    "    df_temp = pd.json_normalize(payload['results'])\n",
-    "    id_num = df_temp.id.iloc[0]\n",
-    "\n",
-    "    # use the id number to get the required info\n",
-    "    base_url = \"https://imdb-api.com/en/API/Title/\"\n",
-    "    complete_url = base_url + api_key + \"/\" + id_num \n",
-    "    payload = requests.get(complete_url).json()\n",
-    "    df_temp = pd.json_normalize(payload)\n",
-    "\n",
-    "    # Extract relevant data and put it into variables\n",
-    "    us_box = df_temp['boxOffice.grossUSA'].iloc[0]\n",
-    "    \n",
-    "    # Return the boolean result of the checker()\n",
-    "    if us_box != '':\n",
-    "        return True\n",
-    "    else: \n",
-    "        return False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create the list of movies to collect data on\n",
-    "movie_list = \\\n",
-    "['dr no',\n",
-    "'from russia with love',\n",
-    "'goldfinger',\n",
-    "'thunderball', \n",
-    "'you only live twice',\n",
-    "'on her majestys secret service',\n",
-    "'diamonds are forever',\n",
-    "'live and let die',\n",
-    "'the man with the golden gun',\n",
-    "'the spy who loved me',\n",
-    "'moonraker',\n",
-    "'for your eyes only',\n",
-    "'octopussy',\n",
-    "'view to a kill',\n",
-    "'the living daylights',\n",
-    "'licence to kill',\n",
-    "'goldeneye',\n",
-    "'tomorrow never dies',\n",
-    "'the world is not enough',\n",
-    "'die another day',\n",
-    "'casino royale',\n",
-    "'quantum of solace',\n",
-    "'skyfall',\n",
-    "'spectre',\n",
-    "'no time to die']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No Time to Die has up to date Box Office API data: \n",
-      "False\n",
-      "The movie's Box Office data will be hard-coded in\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Run checker() to determine if No Time to Die is up to date in the API\n",
-    "print(\"No Time to Die has up to date Box Office API data: \")\n",
-    "print(checker())\n",
-    "if checker() == True:\n",
-    "    print(\"The movie's ticket sales will come from IMDb's API\")\n",
-    "elif checker() == False:\n",
-    "    print(\"The movie's Box Office data will be hard-coded in\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "working on dr no\n",
-      "working on from russia with love\n",
-      "working on goldfinger\n",
-      "working on thunderball\n",
-      "working on you only live twice\n",
-      "working on on her majestys secret service\n",
-      "working on diamonds are forever\n",
-      "working on live and let die\n",
-      "working on the man with the golden gun\n",
-      "working on the spy who loved me\n",
-      "working on moonraker\n",
-      "working on for your eyes only\n",
-      "working on octopussy\n",
-      "working on view to a kill\n",
-      "working on the living daylights\n",
-      "working on licence to kill\n",
-      "working on goldeneye\n",
-      "working on tomorrow never dies\n",
-      "working on the world is not enough\n",
-      "working on die another day\n",
-      "working on casino royale\n",
-      "working on quantum of solace\n",
-      "working on skyfall\n",
-      "working on spectre\n",
-      "working on no time to die\n"
-     ]
-    }
-   ],
-   "source": [
-    "# These commented out lines are use for debugging\n",
-    "# movie_list = movie_list[20:25] \n",
-    "# print(movie_list)\n",
-    "\n",
-    "\n",
-    "# Iterate through the list and add results to data frame \n",
-    "for movie_title in movie_list:\n",
-    "    print('working on ' + movie_title)\n",
-    "    time.sleep(1)  # Put into reduce hang up error on home PC\n",
-    "    new_row = data(movie_title)\n",
-    "    df = df.append(new_row, ignore_index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Calculate the Average change from Domestic to International Gross \n",
-    "total = 0\n",
-    "for index, row in df.iterrows():\n",
-    "    if df['International Revenue'].values[index] != 'No Data':\n",
-    "        usbo = floater(str(df['US Box Office'].values[index]))\n",
-    "        itlbo = floater(str(df['International Revenue'].values[index]))\n",
-    "        total = total + (itlbo/usbo)\n",
-    "counter = df['International Revenue'].str.contains(\"No Data\").value_counts()[0]\n",
-    "change = total/counter\n",
-    "\n",
-    "# Apply the average change by multiplying US Box Office by 'change' variable to replace 'No Data'\n",
-    "for index, row in df.iterrows():\n",
-    "    if df['International Revenue'].values[index] == 'No Data':\n",
-    "        usbo = floater(str(df['US Box Office'].values[index]))\n",
-    "        itlbo = usbo*change\n",
-    "        itlbo = \"${:,.0f} (est.)\".format(itlbo)\n",
-    "        df['International Revenue'][index] = itlbo"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Scrape inflation data from the internet\n",
-    "page = requests.get('https://www.minneapolisfed.org/about-us/monetary-policy/inflation-calculator/consumer-price-index-1913-')\n",
-    "soup = BeautifulSoup(page.content, 'html.parser')\n",
-    "data = soup.find('tbody')\n",
-    "tables = data.find_all('td')\n",
-    "info_list = []\n",
-    "for elem in tables:\n",
-    "    info = elem.findChildren()[0].contents[0]\n",
-    "    info_list.append(info)\n",
-    "\n",
-    "# Put the data into lists and combine the lists into a dictionary\n",
-    "year = []\n",
-    "cpi = []\n",
-    "for value in info_list[::3]:\n",
-    "    value = value.replace('*', '')\n",
-    "    value = value.replace(u'\\xa0', '')\n",
-    "    year.append(value)\n",
-    "for value in info_list[1::3]:\n",
-    "    cpi.append(value)\n",
-    "zip_iterator = zip(year, cpi)\n",
-    "inf_dict = dict(zip_iterator)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Calculate inflation for each movie and place it into a new column 'Adjusted Revenue'\n",
-    "curr_cpi = floater(inf_dict.get('2021'))\n",
-    "for index, row in df.iterrows():\n",
-    "    key = df['Year'].values[index]\n",
-    "    old_cpi = floater(inf_dict.get(key))\n",
-    "    base = floater(df['International Revenue'].values[index])\n",
-    "    adjusted = base * (curr_cpi/old_cpi)\n",
-    "    adjusted = \"${:,.0f}\".format(adjusted)\n",
-    "    df['Adjusted Revenue'][index] = adjusted"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -770,45 +425,109 @@
        "24        68%  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Calculate the average of IMDb and Metacritic ratings and put it into new column Average Rating\n",
-    "for index, row in df.iterrows():\n",
-    "    rate = replace_rating(df['IMDb Rating'].values[index])\n",
-    "    crit = replace_critic(df['Metacritic'].values[index])\n",
-    "    average = (rate + crit)/2\n",
-    "    average = str(average) + '%'\n",
-    "    df['Average Rating'][index] = average\n",
+    "import pandas as pd\n",
+    "import math\n",
+    "\n",
+    "# Create the dataframe\n",
+    "df = pd.read_csv('project007.csv', skiprows=1)  # Change to cloud if time permits\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write the data frame to a csv file\n",
-    "f = open('project007.csv', 'w', newline='')\n",
-    "writer = csv.writer(f)\n",
-    "writer.writerow(['Project 007 CSV', 'By: Andy Snitgen', 'For: Karen Jin', 'Class: comp574', 'Date: Oct. 31, 2021'])\n",
-    "writer.writerow(['Title', 'Year', 'Actor', 'US Box Office', 'International Revenue', 'Adjusted Revenue', 'Average Rating', 'IMDb Rating', 'Metacritic']) \n",
-    "for index, row in df.iterrows():\n",
-    "    title = df.Title[index]\n",
-    "    year = df.Year[index]\n",
-    "    actor = df.Actor[index]\n",
-    "    us_box_office = df['US Box Office'][index]\n",
-    "    international_revenue = df['International Revenue'][index]\n",
-    "    adjusted_revenue = df['Adjusted Revenue'][index]\n",
-    "    average_rating = df['Average Rating'][index]\n",
-    "    imdb_rating = df['IMDb Rating'][index]\n",
-    "    metacritic = df['Metacritic'][index]\n",
-    "    writer.writerow([title, year, actor, us_box_office, international_revenue, adjusted_revenue, average_rating, imdb_rating, metacritic])\n",
-    "f.close()"
+    "# Turn 'International Revenue', 'Adjusted Revenue', and 'Average Rating' values from strings into floats for mathematics\n",
+    "df['International Revenue'] = df['International Revenue'].apply(lambda x: float(x.replace(',', '').replace('$', '').replace(' (est.)', '')))\n",
+    "df['Adjusted Revenue'] = df['Adjusted Revenue'].apply(lambda x: float(x.replace(',', '').replace('$','')))\n",
+    "df['Average Rating'] = df['Average Rating'].apply(lambda x: float(x.replace('%', '')))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The International Revenue has:\n",
+      "        A Mean of: $305,815,526\n",
+      "        A Median of: $192,297,005\n",
+      "The Adjusted Revenue has:\n",
+      "        A Mean of: $783,641,879\n",
+      "        A Median of: $651,678,493\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate the Mean and Median for 'International Revenue' and 'Adjusted Revenue'\n",
+    "columns = ['International Revenue', 'Adjusted Revenue']\n",
+    "for column in columns:    \n",
+    "    # Calculate the Mean and Median\n",
+    "    mean = df[column].mean()\n",
+    "    mean = \"${:,.0f}\".format(mean)\n",
+    "    median = df[column].median()\n",
+    "    median = \"${:,.0f}\".format(median)\n",
+    "    \n",
+    "    # Print the Results\n",
+    "    print(f'The {column} has:')\n",
+    "    print(f'        A Mean of: {mean}')\n",
+    "    print(f'        A Median of: {median}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Average Rating has:\n",
+      "        A Mean of: 65.58%\n",
+      "        A Median of: 64%\n",
+      "        A Mode of: 64%\n",
+      "        A Standard Deviation of: 7.72%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate the Mean, Median, and Mode of 'Average Rating'\n",
+    "column = 'Average Rating'\n",
+    "mean = df[column].mean()\n",
+    "median = df[column].median()\n",
+    "median = \"{:,.0f}%\".format(median)\n",
+    "mode = df[column].mode().iloc[0]\n",
+    "mode = \"{:,.0f}%\".format(mode)\n",
+    "\n",
+    "# Calculate the Standard Deviation of 'Average Rating' \n",
+    "df['Calculations'] = df['Average Rating'].apply(lambda x: (x - mean)*(x - mean))\n",
+    "sum = df['Calculations'].sum()\n",
+    "variance = sum / len(df)\n",
+    "standard_deviation = math.sqrt(variance)\n",
+    "\n",
+    "# Format the results\n",
+    "df = df.drop('Calculations', axis=1)\n",
+    "mean = \"{:,.2f}%\".format(mean)\n",
+    "standard_deviation = \"{:,.2f}%\".format(standard_deviation)\n",
+    "\n",
+    "# Print the Results\n",
+    "print(f'The {column} has:')\n",
+    "print(f'        A Mean of: {mean}')\n",
+    "print(f'        A Median of: {median}')\n",
+    "print(f'        A Mode of: {mode}')\n",
+    "print(f'        A Standard Deviation of: {standard_deviation}')"
    ]
   }
  ],
@@ -818,6 +537,7 @@
   },
   "kernelspec": {
    "display_name": "Python 3.9.2 64-bit",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
