NaN value bug fixed

--- a/007analysis.ipynb
+++ b/007analysis.ipynb
@@ -915,8 +915,8 @@
    ],
    "source": [
     "# Turn 'International Revenue', 'Adjusted Revenue', and 'Average Rating' values from strings into floats for mathematics\n",
-    "df['International Revenue'] = df['International Revenue'].apply(lambda x: x is None if x == 'No Data' else float(x.replace(',', '').replace('$', '').replace(' (est.)', '')))\n",
-    "df['Adjusted Revenue'] = df['Adjusted Revenue'].apply(lambda x: x is None if x == 'No Data' else float(x.replace(',', '').replace('$','')))\n",
+    "df['International Revenue'] = df['International Revenue'].apply(lambda x:x == 'No Data' if x = 1 else float(x.replace(',', '').replace('$', '').replace(' (est.)', '')))\n",
+    "df['Adjusted Revenue'] = df['Adjusted Revenue'].apply(lambda x:  x == 'No Data' if x = 1  else float(x.replace(',', '').replace('$','')))\n",
     "df['Average Rating'] = df['Average Rating'].apply(lambda x: float(x.replace('%', '')))\n",
     "df\n"
    ]
