Milestone II complete

--- a/Milestone_II_Analysis.ipynb
+++ b/Milestone_II_Analysis.ipynb
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -529,9 +529,11 @@
       "The International Revenue has:\n",
       "        A Mean of: $314,979,960\n",
       "        A Median of: $194,088,850\n",
+      "        A Sum of: $7,874,499,002\n",
       "The Adjusted Revenue has:\n",
       "        A Mean of: $796,360,235\n",
-      "        A Median of: $735,220,117\n"
+      "        A Median of: $735,220,117\n",
+      "        A Sum of: $19,909,005,884\n"
      ]
     }
    ],
@@ -539,16 +541,19 @@
     "# Calculate the Mean and Median for 'International Revenue' and 'Adjusted Revenue'\n",
     "columns = ['International Revenue', 'Adjusted Revenue']\n",
     "for column in columns:    \n",
-    "    # Calculate the Mean and Median\n",
+    "    # Calculate the Mean, Median and Sum\n",
     "    mean = df[column].mean()\n",
     "    mean = \"${:,.0f}\".format(mean)\n",
     "    median = df[column].median()\n",
     "    median = \"${:,.0f}\".format(median)\n",
+    "    total = df[column].sum()\n",
+    "    total = \"${:,.0f}\".format(total)\n",
     "    \n",
     "    # Print the Results\n",
     "    print(f'The {column} has:')\n",
     "    print(f'        A Mean of: {mean}')\n",
-    "    print(f'        A Median of: {median}')\n"
+    "    print(f'        A Median of: {median}')\n",
+    "    print(f'        A Sum of: {total}')\n"
    ]
   },
   {
@@ -803,7 +808,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Which actor made the most money?\n",
+    "### Question: Which actor made the most money?\n",
     "```\n",
     "Uses groupby and sum to find the total revenue each actor made\n",
     "```\n",
@@ -811,7 +816,7 @@
     "* The secondary data is calculated with basic math operators\n",
     "* The floats are returned to strings to enhance clarity\n",
     "\n",
-    "<p>An actors worth isn't determined just by their acclaim.  They must also make money.  A complete picture of a franchise must include the highest earnings.  The pie chart below displays each actor's percentage of the series's total revenue. Surprisingly, this is often does not correlate with either the best rated actor, nor the actor with highest number of films.  Instead, there is a trend towards it being a more recent actor.  This is because inflation has not been considered.  Despite this, it can still be an insightful analysis because studio desicions are not frequently based on a historical inflation adjusted statistics, but more recent profitable trends.  An unadjusted look at franchise revenue can useful in predicting the artistic direction a franchise may move into in the future. </p>  "
+    "<p>An actors worth isn't determined just by their acclaim.  They must also make money.  A complete picture of a franchise must include the highest earnings.  The pie chart below displays each actor's percentage of the series's total revenue. Surprisingly, this is often does not correlate with either the best rated actor, nor the actor with highest number of films.  Instead, there is a trend towards higher earnings being associated with more recent actors.  This is because inflation has not been considered.  Despite this, it can still be an insightful analysis because studio desicions are not frequently based on a historical inflation adjusted statistics, but more recent profitable trends.  An unadjusted look at franchise revenue can useful in predicting the artistic direction a franchise may move into in the future. </p>  "
    ]
   },
   {
@@ -870,11 +875,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Which actor made the most money?\n",
+    "### Question: Which actor made the most money when adjusted for inflation?\n",
     "```\n",
+    "Uses groupby and sum to find the adjusted revenue each actor made\n",
     "```\n",
-    "*\n",
-    "<p>However, there can be no denying the value in the inflation adjusted data.  Here a much stronger correlation can be revealed.  Links between commonality, acclaim and revenue become easy to see.   "
+    "* The 'bbox_to_anchor' arguement for the plot.pie figure sets the bounding box and takes postions (x, y)\n",
+    "\n",
+    "<p>However, there can be no denying the value in the inflation adjusted data.  Here a much stronger correlation can be revealed.  Links between commonality, acclaim and revenue become easy to see.  Adjusting the revenue for inflation paints a much more accurate picture about each lead actors financial data.  Lead actors no longer recieve a benefit simply for portraying their role more recently.  Another interesting comparison is the total revenue against the adjusted revenue.  For a long running or older series, the inflation amount can be significantly higher than the unadjusted amount. The effects of inflation are enourmous over a long time span and simply cannot be ignored. </p>      "
    ]
   },
   {
@@ -928,7 +935,34 @@
     "# Print the results\n",
     "print(f'The franchise has made: {total} (Inflation Adjusted)')\n",
     "print(f'{top_actor} made the largest amount: {highest}')\n",
-    "print(f'With {size} of {len(df)} films taking in {percent} of the adjusted revenue')"
+    "print(f'With {size} of {len(df)} films taking in {percent} of the adjusted revenue')\n",
+    "\n",
+    "# Save conclusion data\n",
+    "final_rev = top_actor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question: Which lead actor is the best overall?\n",
+    "```\n",
+    "```\n",
+    "* \n",
+    "<p>\n",
+    "</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Print the winners\n",
+    "print(f'The leadd actor who starred in the most films: {final_mode}')\n",
+    "print(f'The lead actor who scored the highest ratings: {final_rated}')\n",
+    "print(f'The lead actor who earned the most adjusted revenue: {final_rev}')"
    ]
   }
  ],
