--- a/Milestone_III_Prediction.ipynb
+++ b/Milestone_III_Prediction.ipynb
@@ -1,8 +1,46 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Andy Snitgen  \n",
+    "Professor Karen Jin  \n",
+    "Comp 574 - Applied Computing II\n",
+    "December 7, 2021  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Milestone III - Prediction\n",
+    "```\n",
+    "This program will predict Revenue and Ratings categories from the csv files created by the Milestone I file\n",
+    "Input: .csv file containing API data collected in Milestone I \n",
+    "Output: f'strings and plots showcasing the predicted data\n",
+    "```\n",
+    "* The input file goes in the seventh line\n",
+    "    * The syntax is: df = pd.read_csv('data/**filename_here**.csv, skiprows=1)`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Import, read and create\n",
+    "```\n",
+    "This code block imports necessary libraries, reads the csv and displays the dataframe\n",
+    "Input: csv, the file contianing movie data from Milestone I\n",
+    "Ouput: df, the dataframe created from the csv\n",
+    "        df_display, the original dataframe to remain in string formats for viewing\n",
+    "```\n",
+    "* Uses Libraries: Pandas, math, matplotlib, numpy"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,12 +59,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data Cleaning and Feature Engineering"
+    "#### Data Cleaning\n",
+    "```\n",
+    "Uses anonymous lambda to change formatted strings to floats\n",
+    "Input: df, full of formatted strings (ex: $#,###,###)\n",
+    "Ouput: df, all strings changed to numerical values\n",
+    "```\n",
+    "* 1 is used in cases of 'No Data' \n",
+    "    * Uses if statements within lambda functions to determine null values\n",
+    "\n",
+    "<p> We will begin our predictive analysis by cleaning the data.  Essentially, this means replacing all null values.  But it also includes transforming all of the outputs values from formatted, easy to read strings into numeric floats.  This is necessary for mathematical calculations and to ease the data into the machine learning algorithms used later. It is accomplished with anonymous lambda functions that contain string manipulation techniques such as strip and replace.  In cases where null values can exist, if statements are used to determine them, and the null value, 'No Data' is replaced with a 1.  This would alter the answers of math operations, but as we see in the next code block; we will changes these values next. </p>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,8 +88,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Feature Engineering 1\n",
+    "```\n",
+    "Replaces 1 (Null value) with average value for the column\n",
+    "```\n",
+    "* Uses built in .mean() function to find averages\n",
+    "\n",
+    "<p> Our next task is to replace the null values that have been changed to 1, with something more realistic.  This keeps them from skewing the data too heavily in situations where hard, real-world numbers are not available.  We determine what is a realistic approximation by taking the average of the column and replacing the null values with these mean values.  While it is obviously not as good as actual data, it provides a reasonable estimation and allows for more data points then simply deleting incomplete rows.  These extra data points are at a premium when it comes time to run the prediction algorithms and help to keep the predictions more accurate.  A loop was used to search the columns as opposed to fillna because of an issue detecting null values.  In some instances, values that should be null were not.  The loop was used because it worked without issue. </p>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,8 +117,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Feature Engineering 2\n",
+    "```\n",
+    "Creates 2 new columns that rank each films 'Adjusted Revenue' and 'Average Rating' as low, average, or high.\n",
+    "```\n",
+    "* The low, average, and high tags are used only in the display dataframe, the numeric frame contains categories 0, 1, and 2\n",
+    "* Uses qcut to determine the three groups\n",
+    "* uses both a map and a lambda function to change the numeric groups to strings for the display\n",
+    "    * The lambda function contains a nested if statement\n",
+    "\n",
+    "<p> Next, we will create the data to be predicted.  We will do this by creating two new columns, 'Rating Category' and 'Revenue Category'.  What these columns are is each films 'Adjusted Revenue' and 'Adjusted Rating' grouped into three categories.  The categories are low, average, and high.  It is important to note that qcut function ranks movies based solely on their own data set.  So, a movie is ranked as a high earner if it made a large amount of money for its series, even if the series in general trends toward low financial returns.  This is a more useful metric than comparing them to all films in general, as it keeps high or low earning series from having all their movies classified as such.  In the original dataframe, each group is assigned a numberic title 0, 1, or 2, for low, average, and high respectively.  These are changed in the display dataframe into text strings for easier viewing.  The code for this is interesting as it uses a map function in the 'Rating Category' and a nested if statement within a lambda function for the 'Revenue Category'. </p>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,15 +159,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### New Column Explanation\n",
+    "### Dataframe Double Check\n",
+    "```\n",
+    "Displays the data frame with the feature engineered colums and charts displaying the data to be predicted\n",
+    "```\n",
     "* Revenue Category classifes a movies earnings as high, average or low\n",
     "* Rating Categoy classifies movie ratings as high, average or low\n",
-    "* These new columns will be predicted to test accuracy"
+    "* These new columns will be predicted to test accuracy\n",
+    "<p> At this point, it is a good time to double check that the feature engineering worked correctly.  A quick look at the data frame is in order, and why the display data frame has been carried throughout the calculations above.  Its only difference is all of the numeric values have been changed to strings for easier viewing.  However, from this point on we will create new, divergent data frames for each of the two categories to be predicted.  These individualized data sets will provide more accurate predicitions later on.  In addition, we will print charts with a trendline for both the 'Adjusted Revenue' and the 'Average Rating' of the franchise so that we can visualize the data to be predicted. </p>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +646,7 @@
        "24        68%          Average            High  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,15 +656,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Display graphs of data to be predicted"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -678,12 +751,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Test Prediction Models Against Revenue Category"
+    "### Feature Engineering specific to the Revenue Category\n",
+    "```\n",
+    "Changes the 'Ratings Category' column to 3 columns with boolean values\n",
+    "Input: df, the original dataframe with added category columns\n",
+    "Output: df_rev, dataframe engineered to predict the 'Revenue Category'\n",
+    "```\n",
+    "* Uses 1-hot encoding to change 'Rating Category' into 3 columns of 0 and 1\n",
+    "* Drops any column containing strings ('Title' and 'Actor')\n",
+    "\n",
+    "<p> Now that we have looked at the data to be predicted, and the data the predictions will be based on; we will create a new data frame and format it for maximum prediction accuracy.  Since we are looking at the 'Revenue Category' in this case, we will begin by using 1-hot encoding to change the 'Rating Category' into 3 seperate columns with boolean values.  We've attached the prefix rating to each column and also drop any columns that cannot be converted to numeric values.  In this case, that is simply the title and lead actor. </p>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,8 +776,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Create the Models for the Revenue Prediction\n",
+    "```\n",
+    "Converts df_rev to scalar values, drops column to be predicted and uses sklearn model selection to create training data\n",
+    "```\n",
+    "* Test size determines the split of training data versus test data\n",
+    "\n",
+    "<p> First, we start by setting the y value to be tested against.  This data is simply the 'Revenue Category' column in its numeric form.  We then drop that column as we can't predict data we already have.  Next, we use the standard scaler of sklearn to transform the data set to numeric values given a relative weight.  This helps improve the models we will create from this data by making them more accurate.  The final step for this code block is to use the test train split function of sklearn to divide the scaled dataset into the 4 lists required by to create a model. </p>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -717,8 +812,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create and Test the Revenue Category Models\n",
+    "```\n",
+    "Creates both a KNN and DTC models and tests their accuracy\n",
+    "Input: X_train, X_test, y_train, y_test, lists created by train_test_split\n",
+    "Output: f-strings, contain accuracy scores for each model\n",
+    "```\n",
+    "* n_neighbors determines the number of relative datapoints each prediction has.  Essentially, it determines the complexity of the model\n",
+    "    * More neighbors equals a more accurate model that requires more data points\n",
+    "\n",
+    "<p> Now we will create our models and test them.  This involves several steps.  We will first run them for the KNN style classifier, then again for the DTC model; with either one, the process is the same.  First, the model is created and then fit the data using the x and y train lists the split created.  Then the predict method is used on the object created by the classifier.  This method takes an input of the x test list created by the split function.  It produces our predicted results.  We then use the accuracy_score of the sklearn library to test our predicted list against the actual data that we saved and dropped earlier.  It returns the accuracy as a percentage, which we then display as a formatted f-string.  This process is repeated twice, once for ecah: KNN and DTC.  </p> "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
@@ -740,14 +851,14 @@
     "\n",
     "# Print the Accuracy score\n",
     "from sklearn.metrics import accuracy_score\n",
-    "score = accuracy_score(y_test, y_pred) * 100\n",
-    "score = \"{:,.2f}%\".format(score)\n",
-    "print('Accuracy of Revenue Category Prediction using KNN: '+ score)"
+    "score_knn = accuracy_score(y_test, y_pred) * 100\n",
+    "score_knn = \"{:,.2f}%\".format(score_knn)\n",
+    "print('Accuracy of Revenue Category Prediction using KNN: '+ score_knn)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
@@ -768,30 +879,28 @@
     "y_pred2 = clf.predict(X_test)\n",
     "\n",
     "# Print the results\n",
-    "score = accuracy_score(y_test, y_pred) * 100\n",
-    "score = \"{:,.2f}%\".format(score)\n",
-    "print('Accuracy of Revenue Category Prediction using DTC: '+ score)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Predict Revenue for Hypothetical Next Movie"
+    "score_dct = accuracy_score(y_test, y_pred) * 100\n",
+    "score_dct = \"{:,.2f}%\".format(score_dct)\n",
+    "print('Accuracy of Revenue Category Prediction using DTC: '+ score_dct)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Test Prediction Models Against Ratings Category"
+    "### Create and Test the Ratings Category Models\n",
+    "```\n",
+    "Creates both a KNN and DTC models and tests their accuracy\n",
+    "Input: X_train, X_test, y_train, y_test, lists created by train_test_split\n",
+    "Output: f-strings, contain accuracy scores for each model\n",
+    "```\n",
+    "* n_neighbors determines the number of relative datapoints each prediction has.  Essentially, it determines the complexity of the model\n",
+    "    * More neighbors equals a more accurate model that requires more data points"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -803,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -825,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
@@ -845,14 +954,14 @@
     "y2_pred = knn2.predict(X2_test)\n",
     "\n",
     "# Print the Accuracy score\n",
-    "score = accuracy_score(y2_test, y2_pred) * 100\n",
-    "score = \"{:,.2f}%\".format(score)\n",
-    "print('Accuracy of Revenue Category Prediction using KNN: '+ score)"
+    "score_knn2 = accuracy_score(y2_test, y2_pred) * 100\n",
+    "score_knn2 = \"{:,.2f}%\".format(score_knn2)\n",
+    "print('Accuracy of Revenue Category Prediction using KNN: '+ score_knn2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
@@ -872,18 +981,9 @@
     "y2_pred2 = clf2.predict(X2_test)\n",
     "\n",
     "# Print the results\n",
-    "score = accuracy_score(y2_test, y2_pred) * 100\n",
-    "score = \"{:,.2f}%\".format(score)\n",
-    "print('Accuracy of Revenue Category Prediction using DTC: '+ score)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Predict the Rating Category of a Hypothetical Next Movie"
+    "score_dct2 = accuracy_score(y2_test, y2_pred) * 100\n",
+    "score_dct2 = \"{:,.2f}%\".format(score_dct2)\n",
+    "print('Accuracy of Revenue Category Prediction using DTC: '+ score_dct2)"
    ]
   },
   {
@@ -895,11 +995,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 217,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For the Adjusted Revenue Category:\n",
+      "                KNN Accuracy: 71.43%\n",
+      "                DCT Accuracy: 71.43%\n",
+      "For the Adjusted Revenue Category:\n",
+      "                KNN Accuracy: 71.43%\n",
+      "                DCT Accuracy: 71.43%\n",
+      "-------------------------------------------------------\n",
+      "The combined score average is: 71.43%\n",
+      "         This model is considered: Moderately Accurate\n"
+     ]
+    }
+   ],
    "source": [
-    "# Show the predicted Revenue and Rating of the Hypothetical Next Film"
+    "# Show the scores\n",
+    "print('For the Adjusted Revenue Category:')\n",
+    "print(f'                KNN Accuracy: {score_knn}')\n",
+    "print(f'                DCT Accuracy: {score_dct}')\n",
+    "\n",
+    "print('For the Adjusted Revenue Category:')\n",
+    "print(f'                KNN Accuracy: {score_knn2}')\n",
+    "print(f'                DCT Accuracy: {score_dct2}')\n",
+    "\n",
+    "# Calculate the average score\n",
+    "score_list = [score_knn, score_dct, score_knn2, score_dct2]\n",
+    "total = 0\n",
+    "for score in score_list:\n",
+    "    score = float(score.strip('%'))\n",
+    "    total = total + score\n",
+    "length = len(score_list)\n",
+    "avg_score = total / length\n",
+    "\n",
+    "#Classify the average score and display results\n",
+    "print('-------------------------------------------------------')\n",
+    "if avg_score > 80:\n",
+    "    avg_score = \"{:,.2f}%\".format(avg_score)\n",
+    "    print(f'The combined score average is: {avg_score}')\n",
+    "    print('         These models are considered: Highly Accurate')\n",
+    "elif avg_score > 60:\n",
+    "    avg_score = \"{:,.2f}%\".format(avg_score)\n",
+    "    print(f'The combined score average is: {avg_score}')\n",
+    "    print('         These models are considered: Moderately Accurate')\n",
+    "else:\n",
+    "    avg_score = \"{:,.2f}%\".format(avg_score)\n",
+    "    print(f'The combined score average is: {avg_score}')\n",
+    "    print('         These models are considered: Inaccurate')"
    ]
   }
  ],
