Milestone III documentation work

--- a/Milestone_III_Prediction.ipynb
+++ b/Milestone_III_Prediction.ipynb
@@ -59,7 +59,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Data Cleaning\n",
+    "### Data Cleaning\n",
     "```\n",
     "Uses anonymous lambda to change formatted strings to floats\n",
     "Input: df, full of formatted strings (ex: $#,###,###)\n",
@@ -91,7 +91,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Feature Engineering 1\n",
+    "### Feature Engineering 1\n",
     "```\n",
     "Replaces 1 (Null value) with average value for the column\n",
     "```\n",
@@ -120,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Feature Engineering 2\n",
+    "### Feature Engineering 2\n",
     "```\n",
     "Creates 2 new columns that rank each films 'Adjusted Revenue' and 'Average Rating' as low, average, or high.\n",
     "```\n",
@@ -779,7 +779,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Create the Models for the Revenue Prediction\n",
+    "### Create the Lists for the Revenue Prediction\n",
     "```\n",
     "Converts df_rev to scalar values, drops column to be predicted and uses sklearn model selection to create training data\n",
     "```\n",
@@ -888,14 +888,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create and Test the Ratings Category Models\n",
+    "### Feature Engineering specific to the Ratings Category\n",
     "```\n",
-    "Creates both a KNN and DTC models and tests their accuracy\n",
-    "Input: X_train, X_test, y_train, y_test, lists created by train_test_split\n",
-    "Output: f-strings, contain accuracy scores for each model\n",
+    "Changes the 'Ratings Category' column to 3 columns with boolean values\n",
+    "Input: df, the original dataframe with added category columns\n",
+    "Output: df_rev, dataframe engineered to predict the 'Revenue Category'\n",
     "```\n",
-    "* n_neighbors determines the number of relative datapoints each prediction has.  Essentially, it determines the complexity of the model\n",
-    "    * More neighbors equals a more accurate model that requires more data points"
+    "* Uses 1-hot encoding to change 'Rating Category' into 3 columns of 0 and 1\n",
+    "* Drops any column containing strings ('Title' and 'Actor')\n",
+    "\n",
+    "<p> We have tested our models against one category, the inflation adjusted revenue.  Lets see if our models maintain a consistent accuracy if we test for a different statistic. So now we will return to the original data frame and then tweak it to create a new data frame, rate.  This process is exactly the same as before, with the exception that is now the 'Revenue Category' column that is the subject of the 1-hot encoding. </p>   "
    ]
   },
   {
@@ -908,6 +910,17 @@
     "df_rate = df.copy()\n",
     "df_rate = pd.get_dummies(df_rate, columns=['Revenue Category'], prefix = ['Revenue'])\n",
     "df_rate = df_rate.drop(['Title', 'Actor'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create the Lists for the Rating Prediction\n",
+    "```\n",
+    "Converts df_rev to scalar values, drops column to be predicted and uses sklearn model selection to create training data\n",
+    "```\n",
+    "* Test size determines the split of training data versus test data"
    ]
   },
   {
@@ -930,6 +943,20 @@
     "\n",
     "# Build the training and test sets\n",
     "X2_train, X2_test, y2_train, y2_test = train_test_split(X2, y2, test_size=0.25, random_state=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create and Test the Revenue Category Models\n",
+    "```\n",
+    "Creates both a KNN and DTC models and tests their accuracy\n",
+    "Input: X_train, X_test, y_train, y_test, lists created by train_test_split\n",
+    "Output: f-strings, contain accuracy scores for each model\n",
+    "```\n",
+    "* n_neighbors determines the number of relative datapoints each prediction has.  Essentially, it determines the complexity of the model\n",
+    "    * More neighbors equals a more accurate model that requires more data points"
    ]
   },
   {
